--- a/regform.html
+++ b/regform.html
@@ -25,8 +25,8 @@
           border: 3px solid rgb(0, 183, 255);
           border-radius: 3px;
           border-top: 1px solid rgb(0, 183, 255);
-          border-right: 1px solid rgb(0, 183, 255);;
-          border-bottom-style: none;
+          border-right: 1px solid rgb(0, 183, 255);
+          border-bottom: 1px solid rgb(0, 183, 255);
           padding: 5px;
           width: 50%;
         }
@@ -35,7 +35,7 @@
           border: 3px solid rgb(0, 183, 255);
           border-radius: 5px;
           border-top: 2px solid rgb(0, 183, 255);
-          border-bottom-style: 2px solid rgb(0, 183, 255);
+          border-bottom: 2px solid rgb(0, 183, 255);
           padding: 5px;
           width: 50%;
         }
@@ -47,6 +47,7 @@
           border-bottom-style: 2px solid rgb(0, 183, 255);
           padding: 5px;
           width: 50%;
+          border-style: double;
         }
         legend {
           color: rgb(0, 183, 255);
@@ -55,7 +56,7 @@
           font-style: italic;
         }
         input {
-          margin: 5px;
+          margin: 10px;
           margin-left: 2px;
           margin-right: 2px;
         }
@@ -63,14 +64,35 @@
           color: black;
           font-weight: bold;
         }
+        input[type="text"], input[type="email"], input[type="password"], input[type="date"], input[type="url"], input[type="number"]
+        {
+            width: 90%;
+            margin: 10px;
+            border-radius: 7px;
+            height: 30px;
+        }
+        select
+        {
+            width: 90%;
+            margin: 10px;
+            border-radius: 7px;
+            height: 30px;
+        }
+        textarea
+        {
+            width: 90%;
+            margin: 10px;
+            border-radius: 7px;
+            height: 30px;
+        }
         </style>
 </head>
 <body>
     <form action="/action_page.php">
         <fieldset id="basicuserinfo">
             <legend>Basic user information:</legend>
-            <label for="fname">Full name:</label><br>
-            <input type="text" id="fname" name="fname" required><br><br>
+            <label for="fname" >Full name:</label><br>
+            <input type="text" id="fname" name="fname" required size="50" ><br><br>
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" required>
             <br><br>
@@ -107,7 +129,7 @@
             <input type="number" id="postalcode" name="poste"><br>
         </fieldset>
         <fieldset id="preferences">
-            <legend>Preferences:</legend><br>
+            <legend>Preferences:</legend>
             <p><strong>Preffered contact method:</strong></p>
             <input type="checkbox" id="email" name="emailaddress">
             <label for="email">Email</label>
@@ -120,7 +142,7 @@
             <input type="color" id="color" value="#0000ff">
         </fieldset>
         <fieldset id="additional">
-            <legend>Additional details:</legend><br>
+            <legend>Additional details:</legend>
             <label for="source">How did you hear about us?</label><br><br>
             <select id="source" name="source"><br><br>
                 <option value="friend">Friend</option>
@@ -132,7 +154,7 @@
             <textarea name="feedback"></textarea><br>
         </fieldset>
         <fieldset id="profile">
-            <legend>Profile:</legend><br>
+            <legend>Profile:</legend>
             <label for="photo">Upload a Profile Picture:</label>
             <input type="file" id="photo" name="imagename" accept=".jpg, .png">
             <br><br>
