--- a/regform.html
+++ b/regform.html
@@ -3,51 +3,13 @@
 <head>
     <title> Registration Form</title>
     <style>
-         #basicuserinfo {
-          background-color: white;
-          border: 3px solid rgb(0, 183, 255);
-          border-radius: 5px;
-          border-bottom: 1px solid rgb(0, 183, 255);
-          padding: 5px;
-          width: 50%;
-        }
-        #addressinfo {
-          background-color: white;
-          border: 3px solid rgb(0, 183, 255);
-          border-radius: 5px;
-          border-top: 1px solid rgb(0, 183, 255);
-          border-bottom-style: none;
-          padding: 5px;
-          width: 50%;
-        }
-        #preferences {
+        fieldset {
           background-color: white;
           border: 3px solid rgb(0, 183, 255);
           border-radius: 3px;
-          border-top: 1px solid rgb(0, 183, 255);
-          border-right: 1px solid rgb(0, 183, 255);
-          border-bottom: 1px solid rgb(0, 183, 255);
+          border-left-width: 2px ;
           padding: 5px;
           width: 50%;
-        }
-        #additional {
-          background-color: white;
-          border: 3px solid rgb(0, 183, 255);
-          border-radius: 5px;
-          border-top: 2px solid rgb(0, 183, 255);
-          border-bottom: 2px solid rgb(0, 183, 255);
-          padding: 5px;
-          width: 50%;
-        }
-        #profile {
-          background-color: white;
-          border: 3px solid rgb(0, 183, 255);
-          border-radius: 2px;
-          border-top: 2px solid rgb(0, 183, 255);
-          border-bottom-style: 2px solid rgb(0, 183, 255);
-          padding: 5px;
-          width: 50%;
-          border-style: double;
         }
         legend {
           color: rgb(0, 183, 255);
